# android_native_surface_example

./: .gitmodules
android_native_surface/: Cargo.toml
android_native_surface/src/: lib.rs
app/: build.gradle
app/src/main/java/rust/androidnativesurface/: MainActivity.kt
