[package]
name = "android_native_surface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.11"
glium = "0.31"
glutin = "0.28"
jni = "0.19"
log = "0.4"
ndk = { git = "https://github.com/lattice0/android-ndk-rs", rev = "4dd07624a1c658373b7ea7b1b9a46ae72a9f79ff", features = ["api-level-28"] }

[build-dependencies]
gl_generator = "0.14"

[patch.crates-io]
glutin = { git = "https://github.com/MarijnS95/glutin", rev = "c959f01" }
glium = { git = "https://github.com/MarijnS95/glium", rev = "bb780d6" }
